@@ -114,21 +114,12 @@ add_action( 'dt_footer_copyright', 'dt_footer_copyright_default', 10 );
 function dt_footer_copyright_default() {
 	$dt_disable_footer_credits = esc_attr(get_theme_mod('dt_disable_footer_credits', DT_DISABLE_FOOTER_CREDITS));
 	if ($dt_disable_footer_credits != '1') {
-		$theme = wp_get_theme();
-		$theme_name = $theme->display('Name');
-		$theme_url = $theme->display('ThemeURI');
+		$theme_name = "Directory Starter";
+		$theme_url = "https://wordpress.org/themes/directory-starter/";
 
-
-		if(is_front_page()){
-			$wp_link = '<a href="https://wordpress.org" target="_blank" title="' . esc_attr__('WordPress', 'directory-starter') . '"><span>' . __('WordPress', 'directory-starter') . '</span></a>';
-			$default_footer_value = sprintf(__('Copyright &copy; %1$s %2$s %3$s Theme %4$s', 'directory-starter'),date('Y'),"<a href='$theme_url' target='_blank' title='$theme_name'>", $theme_name, "</a>");
-			$default_footer_value .= sprintf(__(' - Powered by %s.', 'directory-starter'), $wp_link);
-		}else{
-			$wp_link = __('WordPress', 'directory-starter');
-			$default_footer_value = sprintf(__('Copyright &copy; %1$s %2$s Theme', 'directory-starter'),date('Y'), $theme_name);
-			$default_footer_value .= sprintf(__(' - Powered by %s.', 'directory-starter'), $wp_link);
-		}
-
+		$wp_link = '<a href="https://wordpress.org/" target="_blank" title="' . esc_attr__('WordPress', 'directory-starter') . '"><span>' . __('WordPress', 'directory-starter') . '</span></a>';
+		$default_footer_value = sprintf(__('Copyright &copy; %1$s %2$s %3$s Theme %4$s', 'directory-starter'),date('Y'),"<a href='$theme_url' target='_blank' title='$theme_name'>", $theme_name, "</a>");
+		$default_footer_value .= sprintf(__(' - Powered by %s.', 'directory-starter'), $wp_link);
 
 		echo $default_footer_value;
 
