@@ -4,7 +4,7 @@ Theme URI: https://wpgeodirectory.com/directory-starter/
 Author: GeoDirectory Team
 Author URI: https://wpgeodirectory.com/
 Description: Directory Starter is a starter theme for our GeoDirectory plugin (https://wordpress.org/plugins/geodirectory/), perfect to be edited directly or to create your own child themes. Directory Starter is a fully responsive Directory Theme that has been methodically coded to be lightweight and customisable, we have used all the latest WordPress Customizer options allowing you to customise the look and feel of your site with no coding knowledge. Check out the 1st child theme for DS called Supreme directory (https://wpgeodirectory.com/downloads/supreme-directory/)
-Version: 1.1.4
+Version: 1.1.5
 License: GPLv2 or greater
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: one-column, two-columns, three-columns, left-sidebar, right-sidebar, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, translation-ready
